<resources>
    <string name="app_name">Word Clock</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Elegant clock showing the time in words</string>
    <string name="word_clock">Word Clock</string>
    <string name="notification_text">Nothing to see here... just updating your clock widget</string>
    <string name="word_clock_preview">Word Clock Preview</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="colour">Colour</string>
    <string name="opacity">Opacity</string>
    <string name="background_image">Background Image</string>
    <string name="timezone">Timezone</string>
    <string name="custom">Custom</string>
</resources>