<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageClock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:padding="10dp"
        android:contentDescription="@string/word_clock_preview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:paddingTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTimezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timezone"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinContinent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/textTimezone"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/spinLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/spinContinent"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.outsidecontextproblem.wordclock.ClockElementConfigurator
                app:elementTitle="Lit Text Colour"
                app:showControlTitle="true"
                app:redComponent="51"
                app:greenComponent="51"
                app:blueComponent="51"
                app:colourOpacity="51"
                android:id="@+id/litText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spinLocation" />

            <com.outsidecontextproblem.wordclock.ClockElementConfigurator
                app:elementTitle="Background Text Colour"
                app:showControlTitle="true"
                app:redComponent="0"
                app:greenComponent="0"
                app:blueComponent="0"
                app:colourOpacity="16"
                android:id="@+id/backgroundText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/litText" />

            <TextView
                android:id="@+id/textBackgroundTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/background_image"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/backgroundText" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textBackgroundTitle"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:id="@+id/tableBackgrounds">

                <TableRow>

                    <ImageView
                        android:id="@+id/imageBackground1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_1"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="1"
                        android:padding="2dp" />

                    <ImageView
                        android:id="@+id/imageBackground2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_2"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="2"
                        android:padding="2dp" />

                    <ImageView
                        android:id="@+id/imageBackground3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_3"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="3"
                        android:padding="2dp" />

                    <ImageView
                        android:id="@+id/imageBackground4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_4"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="4"
                        android:padding="2dp" />

                </TableRow>

                <TableRow>

                    <ImageView
                        android:id="@+id/imageBackground5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_5"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="5"
                        android:padding="2dp" />

                    <ImageView
                        android:id="@+id/imageBackground6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_6"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="6"
                        android:padding="2dp" />

                    <ImageView
                        android:id="@+id/imageBackground7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_7"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="7"
                        android:padding="2dp" />

                    <ImageView
                        android:id="@+id/imageBackground8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:src="@drawable/background_8"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:tag="8"
                        android:padding="2dp" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/buttonSelect"
                android:text="@string/custom"
                android:padding="0dp"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tableBackgrounds"
                android:layout_marginLeft="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cancel"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/configuratorTicks" />

        <Space
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/done"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/configuratorTicks" />

    </LinearLayout>

</LinearLayout>